--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -15,21 +15,22 @@
   .L-projects-container {
 	margin-top : 20px;
 	width      : 100%;
-	//background-color: red;
+
 	.card {
 	  width    : 45%;
-	  border   : 10px solid green;
-	  height   : 300px;
+	  height   : 400px;
 	  position : relative;
 	  cursor   : pointer;
 	  margin   : 20px 0;
 
+
 	  &:hover > .front {
-		transform : perspective(1000px) rotateY(-180deg);
+	  transform : perspective(1000px) rotateY(-180deg);
+
 	  }
 
 	  &:hover > .back {
-		transform : perspective(1000px) rotateY(0deg);
+	  transform : perspective(1000px) rotateY(0deg);
 	  }
 	}
 
@@ -41,14 +42,23 @@
 	  backface-visibility : hidden;
 	  position            : absolute;
 	  transition          : transform  $transition-1 ease;
+
 	}
 
 	.front img {
 	  height : 100%;
+
 	}
 
 	.front {
-	  transform : perspective(600px) rotateY(0deg);
+	  .L-projects-slider {
+		border: 1px solid red;
+
+
+	  }
+
+	  //transform : perspective(600px) rotateY(0deg);
+
 	}
 
 	.back {
